Add ability redact existing spans in a PDF (#275)
* Working on ability to apply spans to PDFs.

* Removing unneeded properties.

* Adding positions to span. Removing duplicate code.

* Adding apply for plain text filter.

* Adding javadocs.

* Updating commons-lang3.

* Not processing the pdf text if there are just bounding boxes in the policy.

* Fixing redactor spelling and removing unnecessary levels of abstraction.

* Minor cleanup.